force-app/main/default/objects/Serving__c/Serving__c.object-meta.xml
<CustomObject>
    <label>Serving</label>
    <nameField>
        <displayFormat>SN-{0000000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Servings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>