force-app/main/default/objects/Serving__c/fields/Category_CSD__c.field-meta.xml
<CustomField>
    <fullName>Category_CSD__c</fullName>
    <label>Category(CSD)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cart</fullName>
            </value>
            <value>
                <fullName>Standard Units &amp; Others</fullName>
            </value>
            <value>
                <fullName>Tray</fullName>
            </value>
            <value>
                <fullName>Crew Use</fullName>
            </value>
            <value>
                <fullName>Meal Related Equipment</fullName>
            </value>
            <value>
                <fullName>Rack and Drawer</fullName>
            </value>
            <value>
                <fullName>Bags</fullName>
            </value>
            <value>
                <fullName>DFS Bags</fullName>
            </value>
            <value>
                <fullName>Other Linens</fullName>
            </value>
            <value>
                <fullName>Blankets</fullName>
            </value>
            <value>
                <fullName>Pillows</fullName>
            </value>
            <value>
                <fullName>Mattress</fullName>
            </value>
            <value>
                <fullName>Meal Linens</fullName>
            </value>
            <value>
                <fullName>Amenity</fullName>
            </value>
            <value>
                <fullName>Personal Hygiene</fullName>
            </value>
            <value>
                <fullName>Lavatory Supplies</fullName>
            </value>
            <value>
                <fullName>Headset</fullName>
            </value>
            <value>
                <fullName>F+C Tableware</fullName>
            </value>
            <value>
                <fullName>PEY+Y Tableware</fullName>
            </value>
            <value>
                <fullName>Glassware</fullName>
            </value>
            <value>
                <fullName>Galley Acc</fullName>
            </value>
            <value>
                <fullName>Printed Items</fullName>
            </value>
            <value>
                <fullName>Toys</fullName>
            </value>
            <value>
                <fullName>Stationaries</fullName>
            </value>
            <value>
                <fullName>Locks</fullName>
            </value>
            <value>
                <fullName>Safety Cards</fullName>
            </value>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>Starter</fullName>
            </value>
            <value>
                <fullName>Soup</fullName>
            </value>
            <value>
                <fullName>Salad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>