force-app/main/default/objects/Serving__c/fields/Category_of_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Category_of_Feedback__c</fullName>
    <label>Category of Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insufficient Loading</fullName>
            </value>
            <value>
                <fullName>Unload</fullName>
            </value>
            <value>
                <fullName>Loading Error</fullName>
            </value>
            <value>
                <fullName>Cleanliness</fullName>
            </value>
            <value>
                <fullName>Broken</fullName>
            </value>
            <value>
                <fullName>Foreign Objects</fullName>
            </value>
            <value>
                <fullName>Crew Feedback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>