force-app/main/default/objects/Serving__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dry goods</fullName>
            </value>
            <value>
                <fullName>Amenities</fullName>
            </value>
            <value>
                <fullName>Alcohol</fullName>
            </value>
            <value>
                <fullName>Soft Drink</fullName>
            </value>
            <value>
                <fullName>Serving Linens</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Items</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
                <isActive>false</isActive>
                <label>Equipment</label>
            </value>
            <value>
                <fullName>Tableware</fullName>
                <isActive>false</isActive>
                <label>Tableware</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>